--- a/css/demo2024.scss
+++ b/css/demo2024.scss
@@ -48,23 +48,23 @@
         --#{$prefix}table-color-state: $color;
     }
 }
-$ThemePaceColor: #AF1E2C;
+$ThemePaceColor: #367FA9;
 $ThemeTableBodyBackgroundColor: $table-bg;
 $ThemeTableBodyColor: $table-color;
 $ThemeTableBodyStripedBackgroundColor: $table-striped-bg;
 $ThemeTableBodyStripedColor: $table-striped-color;
 $ThemeTableBodyHoverBackgroundColor: $table-hover-bg;
 $ThemeTableBodyHoverColor: $table-hover-color;
-$ThemeTableHeaderBackgroundColor: #CC3140;
-$ThemeTableHeaderBorderColor: #BB2D3B;
+$ThemeTableHeaderBackgroundColor: #5797BC;
+$ThemeTableHeaderBorderColor: #508BAD;
 $ThemeTableHeaderColor: null;
-$ThemeTableFooterBackgroundColor: #FAE1E3;
+$ThemeTableFooterBackgroundColor: #E7F1F7;
 $ThemeTableFooterColor: null;
 $ThemeTableActiveColor: $table-color;
-$ThemeTableBodyActiveBackgroundColor: #F8D7DA;
+$ThemeTableBodyActiveBackgroundColor: #DFEDF5;
 $ThemeTableBodyActiveColor: null;
 $ThemeGridBorderWidth: $table-border-width;
-$ThemeGridBorderColor: #A52834;
+$ThemeGridBorderColor: #467B99;
 $ThemeGridLineColor: $table-border-color;
 $ThemeGridPagerPanelBackgroundColor: $card-cap-bg;
 $ThemeGridPagerPanelColor: null;
@@ -80,33 +80,33 @@ $UseResponsiveTable: true;
 $ThemeTableStriped: true;
 
 // Report
-$ThemeReportGroupBackgroundColor1: #FAE1E3;
+$ThemeReportGroupBackgroundColor1: #E7F1F7;
 $ThemeReportGroupColor1: null;
-$ThemeReportGroupSummaryBackgroundColor1: #FAE1E3;
+$ThemeReportGroupSummaryBackgroundColor1: #E7F1F7;
 $ThemeReportGroupSummaryColor1: null;
 $ThemeReportGroupBackgroundColor2: null;
 $ThemeReportGroupColor2: null;
 $ThemeReportGroupSummaryBackgroundColor2: null;
 $ThemeReportGroupSummaryColor2: null;
-$ThemeReportGroupBackgroundColor3: #FAE1E3;
+$ThemeReportGroupBackgroundColor3: #E7F1F7;
 $ThemeReportGroupColor3: null;
-$ThemeReportGroupSummaryBackgroundColor3: #FAE1E3;
+$ThemeReportGroupSummaryBackgroundColor3: #E7F1F7;
 $ThemeReportGroupSummaryColor3: null;
 $ThemeReportGroupBackgroundColor4: null;
 $ThemeReportGroupColor4: null;
 $ThemeReportGroupSummaryBackgroundColor4: null;
 $ThemeReportGroupSummaryColor4: null;
-$ThemeReportGroupBackgroundColor5: #FAE1E3;
+$ThemeReportGroupBackgroundColor5: #E7F1F7;
 $ThemeReportGroupColor5: null;
-$ThemeReportGroupSummaryBackgroundColor5: #FAE1E3;
+$ThemeReportGroupSummaryBackgroundColor5: #E7F1F7;
 $ThemeReportGroupSummaryColor5: null;
 $ThemeReportGroupBackgroundColor6: null;
 $ThemeReportGroupColor6: null;
 $ThemeReportGroupSummaryBackgroundColor6: null;
 $ThemeReportGroupSummaryColor6: null;
-$ThemeReportPageSummaryBackgroundColor: #F9DCDE;
+$ThemeReportPageSummaryBackgroundColor: #E3EFF6;
 $ThemeReportPageSummaryColor: null;
-$ThemeReportGrandSummaryBackgroundColor: #F8D7DA;
+$ThemeReportGrandSummaryBackgroundColor: #DFEDF5;
 $ThemeReportGrandSummaryColor: null;
 $screen-sm-min: map-get($grid-breakpoints, sm);
 $screen-xs-max: ($screen-sm-min - 1);
