--- a/css/ewpdf.scss
+++ b/css/ewpdf.scss
@@ -10,40 +10,40 @@ $ThemeTableBodyBackgroundColor: $table-bg;
 $ThemeTableBodyColor: $table-color;
 $ThemeTableBodyStripedBackgroundColor: $table-striped-bg;
 $ThemeTableBodyStripedColor: $table-striped-color;
-$ThemeTableHeaderBackgroundColor: #CC3140;
+$ThemeTableHeaderBackgroundColor: #5797BC;
 $ThemeTableHeaderColor: null;
-$ThemeTableFooterBackgroundColor: #FAE1E3;
+$ThemeTableFooterBackgroundColor: #E7F1F7;
 $ThemeTableFooterColor: null;
 $ThemeGridLineColor: $table-border-color;
 
 // Report
-$ThemeReportGroupBackgroundColor1: #FAE1E3;
+$ThemeReportGroupBackgroundColor1: #E7F1F7;
 $ThemeReportGroupColor1: null;
-$ThemeReportGroupSummaryBackgroundColor1: #FAE1E3;
+$ThemeReportGroupSummaryBackgroundColor1: #E7F1F7;
 $ThemeReportGroupSummaryColor1: null;
 $ThemeReportGroupBackgroundColor2: null;
 $ThemeReportGroupColor2: null;
 $ThemeReportGroupSummaryBackgroundColor2: null;
 $ThemeReportGroupSummaryColor2: null;
-$ThemeReportGroupBackgroundColor3: #FAE1E3;
+$ThemeReportGroupBackgroundColor3: #E7F1F7;
 $ThemeReportGroupColor3: null;
-$ThemeReportGroupSummaryBackgroundColor3: #FAE1E3;
+$ThemeReportGroupSummaryBackgroundColor3: #E7F1F7;
 $ThemeReportGroupSummaryColor3: null;
 $ThemeReportGroupBackgroundColor4: null;
 $ThemeReportGroupColor4: null;
 $ThemeReportGroupSummaryBackgroundColor4: null;
 $ThemeReportGroupSummaryColor4: null;
-$ThemeReportGroupBackgroundColor5: #FAE1E3;
+$ThemeReportGroupBackgroundColor5: #E7F1F7;
 $ThemeReportGroupColor5: null;
-$ThemeReportGroupSummaryBackgroundColor5: #FAE1E3;
+$ThemeReportGroupSummaryBackgroundColor5: #E7F1F7;
 $ThemeReportGroupSummaryColor5: null;
 $ThemeReportGroupBackgroundColor6: null;
 $ThemeReportGroupColor6: null;
 $ThemeReportGroupSummaryBackgroundColor6: null;
 $ThemeReportGroupSummaryColor6: null;
-$ThemeReportPageSummaryBackgroundColor: #F9DCDE;
+$ThemeReportPageSummaryBackgroundColor: #E3EFF6;
 $ThemeReportPageSummaryColor: null;
-$ThemeReportGrandSummaryBackgroundColor: #F8D7DA;
+$ThemeReportGrandSummaryBackgroundColor: #DFEDF5;
 $ThemeReportGrandSummaryColor: null;
 $ThemeTableStriped: true;
 body {
